[gd_scene load_steps=6 format=2]

[ext_resource path="res://tscn/UI/GameoverScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/UI/SettingsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/UI/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Screens.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/switch33.wav" type="AudioStream" id=5]

[node name="Screens" type="Node2D"]
script = ExtResource( 4 )

[node name="TitleScreen" parent="." instance=ExtResource( 3 )]
offset = Vector2( 0, -800 )
transform = Transform2D( 1, 0, 0, 1, 0, -800 )

[node name="SettingsScreen" parent="." instance=ExtResource( 2 )]
offset = Vector2( 0, -800 )
transform = Transform2D( 1, 0, 0, 1, 0, -800 )

[node name="GameoverScreen" parent="." instance=ExtResource( 1 )]
offset = Vector2( 0, -800 )
transform = Transform2D( 1, 0, 0, 1, 0, -800 )

[node name="Switch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
